--- a/src/aura/expenseItem/expenseItem.cmp
+++ b/src/aura/expenseItem/expenseItem.cmp
@@ -3,13 +3,16 @@
     <aura:attribute name="formatdate" type="Date"/>
     <aura:attribute name="expense" type="Expense__c"/>
 
-    <lightning:card title="{!v.expense.Name}" iconName="standard:scan_card"
-                    class="{!v.expense.Reimbursed__c ?
-                           'slds-theme--success' : ''}">
+	<aura:registerEvent name="updateExpense" type="c:expensesItemUpdate" description="" />
+	
+	   <lightning:card title="{!v.expense.Name}" iconName="standard:scan_card"
+                    class="{!v.expense.Reimbursed__c ? 'slds-theme_success' : ''}">
+                    
         <aura:set attribute="footer">
             <p>Date: <lightning:formattedDateTime value="{!v.formatdate}"/></p>
             <p class="slds-text-title"><lightning:relativeDateTime value="{!v.formatdate}"/></p>
         </aura:set>
+        
         <p class="slds-text-heading--medium slds-p-horizontal--small">
            Amount: <lightning:formattedNumber value="{!v.expense.Amount__c}" style="currency"/>
         </p>
